syntax = "proto3";
package DomainServices.CodebookService.v1;
option csharp_namespace = "DomainServices.CodebookService.Contracts.v1";

import "google/protobuf/wrappers.proto";

message GenericCodebookResponse {
	repeated GenericCodebookItem Items = 1;

	message GenericCodebookItem {
	   int32 Id = 1;
	   string Name = 2;
	   google.protobuf.StringValue Description = 3;
	   google.protobuf.StringValue Code = 4;
	   google.protobuf.StringValue RdmCode = 5;
	   google.protobuf.BoolValue IsValid = 6;
	   google.protobuf.BoolValue IsDefault = 7;
	}
}